@@ -10,5 +10,5 @@ Lane,Sample_ID,Sample_Name,GenomeFolder,Index,bait_name,default_library_type,def
 6,14801132,Kolf_22_1,,CGATGT,,RNA-seq dUTP,CGATGT,,deh@sanger.ac.uk,,deh@sanger.ac.uk,deh@sanger.ac.uk,0,0,,,Kolf_22_1 14801132,Homo sapiens,9606,S0979,1493,Pathogen host sequencing,,,from:100 to:1000,,,Homo sapiens,,,,2381772,Kolf_22_1,,,,888,,1,0,0,To generate an RNA-Seq dataset for organoids stimulated with IL-22%3B Salmonella Typhimurium%3B IL-22 and Salmonella Typhimurium%3B and unstimulated.%0AThese data are part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3784,I2134 Transcriptional response of Kolf2 intestinal organoids to IL-22 (GD),Homo_sapiens (GRCh38_15),1,Transcriptional response of Kolf2 intestinal organoids to IL-22,2,
 6,12172503,phiX_for_spiked_buffers,,ACAACGCAATC,,,ACAACGCAATC,,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiXBPS24Oct14,,10847,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,888,,1,0,0,None,198,Illumina Controls,,,,888,
 8,14727840,ERS811018,,CGATGTTT,,ChIP-Seq Auto,CGATGTTT,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1927,Analysis of the chromatin state of mouse stem and progenitor cell compartment S0815,,,from:100 to:1000,ERS811018,,Mus musculus,,Lin_neg_bone marrow,,2376982,2905STDY6178180,UTX_IP_UTX_GTX_A,,,888,ERP004563,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0A,2905,Analysis of the chromatin state of mouse stem and progenitor cell compartment,Mus_musculus (GRCm38),,Analysis of the chromatin state of mouse stem and progenitor cell compartment,1,
-8,14727876,ERS811021,,ACAGTGGT,,ChIP-Seq Auto,ACAGTGGT,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1927,Analysis of the chromatin state of mouse stem and progenitor cell compartment S0815,,,from:100 to:1000,ERS811021,,Mus musculus,,Lin_neg_bone marrow,,2376985,2905STDY6178183,UTX_IP_UTX_Bethyl_C,,,888,ERP004563,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0A,2905,Analysis of the chromatin state of mouse stem and progenitor cell compartment,Mus_musculus (GRCm38),,Analysis of the chromatin state of mouse stem and progenitor cell compartment,2,
+8,14727876,ERS811021,,ACAGTGGT,,ChIP-Seq Auto,ACAGTGGT,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1927,Analysis of the chromatin state of mouse stem and progenitor cell compartment S0815,,,from:100 to:1000,ERS811021,,Mus musculus,,Lin_neg_bone marrow,,2376985,2905STDY6178183,UTX_IP_UTX_Bethyl_C,,,888,ERP004563,1,0,0,This data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F%0A,2905,Analysis of the chromatin state of mouse stem and progenitor cell compartment,Mus_musculus (GRCm38 + ensembl_84_transcriptome) [star],,Analysis of the chromatin state of mouse stem and progenitor cell compartment,2,
 8,12172503,phiX_for_spiked_buffers,,ACAACGCAATC,,,ACAACGCAATC,,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiXBPS24Oct14,,10847,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,888,,1,0,0,None,198,Illumina Controls,,,,888,
